objects/Billing_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field captures the amount to be paid on this Payment of the Billing Plan</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>This field captures the Invoice Date of the payment</description>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_No__c</fullName>
        <label>Payment No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Billing Plan</relationshipLabel>
        <relationshipName>Billing_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>For purpose of Data migration</description>
        <externalId>true</externalId>
        <label>ROW ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Amount__c</fullName>
        <label>USD Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For to identify the details of Migrating details</description>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Plan</label>
    <nameField>
        <label>Payment No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>